--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,26 @@
 * {
   margin: 0;
   padding: 0;
+  outline: none;
 }
 .main {
-  overflow-x: hidden;
   display: flex;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: relative;
+  display: grid;
 }
 .main .navbar {
   background-color: #181818;
-  width: 13rem;
+  min-width: 13rem;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
 }
 .main .navbar .navbar__logo {
   position: relative;
@@ -83,42 +88,100 @@
   color: #08fdd8;
   transition-duration: 0.6s;
 }
-.main .section-home {
+.main .right-section {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 13rem;
+  bottom: 0;
+}
+.main .right-section .section-home {
   background-image: url('/images/cufIWh.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   position: absolute;
+  height: 100vh;
+  width: 100%;
   top: 0;
   left: 13rem;
   right: 0;
   bottom: 0;
 }
-.main .section-home > .text-zone {
+.main .right-section .section-home > .text-zone {
   height: 100vh;
   color: #909096;
   position: absolute;
   display: flex;
   align-items: center;
 }
-.main .section-home > .text-zone h1 {
+.main .right-section .section-home > .text-zone h1 {
   padding: 2rem;
 }
-.main .section-home > .text-zone h1 .blast {
+.main .right-section .section-home > .text-zone h1 .blast {
   display: inline-block;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.918);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 700;
-  line-height: 7rem;
-  font-size: 6rem;
+  line-height: 1em;
+  font-size: 4em;
 }
-.main .section-home > .text-zone h1 .blast:hover {
+.main .right-section .section-home > .text-zone h1 .blast:hover {
   color: #08fdd8;
   animation: rubberBand 1s;
 }
-.main .section-home > .text-zone h1 .blast::selection {
+.main .right-section .section-home > .text-zone h1 .blast::selection {
   list-style-type: none;
+}
+.main .right-section .section-projects {
+  position: absolute;
+  width: 100%;
+  max-height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  top: 100vh;
+  left: 13rem;
+}
+.main .right-section .section-projects .project-image {
+  position: relative;
+  display: flex;
+}
+.main .right-section .section-projects .project-image img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.main .right-section .section-projects .project-image:hover .project-hover {
+  position: absolute;
+  opacity: 1;
+  transition-duration: 1s;
+  transition-delay: 0.1s;
+}
+.main .right-section .section-projects .project-image .project-hover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+  color: #08fdd8;
+  background-color: rgba(255, 255, 255, 0.582);
+}
+.main .right-section .section-projects .project-image .project-hover .project-button {
+  cursor: pointer;
+  border: none;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #08fdd8;
+  text-align: center;
+}
+.main .right-section .section-projects .project-image .project-hover .project-button a {
+  text-decoration: none;
+  color: black;
+  letter-spacing: 0.2rem;
 }
 /* Animation text-zone h1*/
 @keyframes rubberBand {
