--- a/quizGame/css/style.css
+++ b/quizGame/css/style.css
@@ -7,6 +7,7 @@
   background-size: cover;
   width: 100%;
   height: 100vh;
+  position: fixed;
 }
 .main__quiz-game .home {
   display: flex;
@@ -26,4 +27,51 @@
 }
 .main__quiz-game .home > button > a > i {
   font-size: 30px;
+}
+.main__quiz-game .container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+.main__quiz-game .container .quiz-box #quiz > h1 {
+  font-size: 4rem;
+  margin: 50px 0;
+}
+.main__quiz-game .container .quiz-box #quiz .quiz-header {
+  display: flex;
+  justify-content: space-between;
+}
+.main__quiz-game .container .quiz-box #quiz .quiz-header #progress {
+  font-size: 1.5rem;
+  margin-bottom: 16px;
+  color: antiquewhite;
+}
+.main__quiz-game .container .quiz-box #quiz .quiz-header #count-down {
+  font-size: 1.5rem;
+  color: #472801;
+  font-weight: 900;
+}
+.main__quiz-game .container .quiz-box #quiz #question {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: #ffe0c6;
+}
+.main__quiz-game .container .quiz-box #quiz .buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.main__quiz-game .container .quiz-box #quiz .buttons .btn {
+  text-align: start;
+  text-indent: 10px;
+  min-height: 3rem;
+  border: none;
+  border-radius: 10px;
+  background-color: #8a5c1867;
+  color: antiquewhite;
+  font-size: 1.5rem;
+  box-shadow: 0 0 5px 5px #5c3f169a;
 }
