--- a/quizGame/css/style.less
+++ b/quizGame/css/style.less
@@ -8,6 +8,7 @@
     background-size: cover;
     width: 100%;
     height: 100vh;
+    position: fixed;
     .home {
         display: flex;
         justify-content: center;
@@ -23,6 +24,58 @@
                 color: #463214;
                 > i {
                     font-size: 30px;
+                }
+            }
+        }
+    }
+    .container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        .quiz-box {
+            // min-width: 500px;
+            #quiz {
+                > h1 {
+                    font-size: 4rem;
+                    margin: 50px 0;
+                }
+                .quiz-header {
+                    display: flex;
+                    justify-content: space-between;
+                    #progress {
+                        font-size: 1.5rem;
+                        margin-bottom: 16px;
+                        color: antiquewhite;
+                    }
+                    #count-down {
+                        font-size: 1.5rem;
+                        color: rgb(71, 40, 1);
+                        font-weight: 900;
+                    }
+                }
+                #question {
+                    font-size: 2rem;
+                    margin-bottom: 20px;
+                    color: #ffe0c6;
+                }
+                .buttons {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 16px;
+                    .btn {
+                        text-align: start;
+                        text-indent: 10px;
+                        min-height: 3rem;
+                        border: none;
+                        border-radius: 10px;
+                        background-color: #8a5c1867;
+                        color: antiquewhite;
+                        font-size: 1.5rem;
+                        box-shadow: 0 0 5px 5px #5c3f169a;
+                    }
                 }
             }
         }
