--- a/quizGame/css/style.less
+++ b/quizGame/css/style.less
@@ -36,7 +36,6 @@
         justify-content: start;
         align-items: center;
         .quiz-box {
-            // min-width: 500px;
             #quiz {
                 > h1 {
                     font-size: 4rem;
@@ -75,6 +74,19 @@
                         color: antiquewhite;
                         font-size: 1.5rem;
                         box-shadow: 0 0 5px 5px #5c3f169a;
+                    }
+                }
+                #score {
+                    color: rgb(253, 229, 151);
+                    font-size: 3rem;
+                }
+                .quiz-repeat {
+                    margin-top: 4rem;
+                    a {
+                        text-decoration: none;
+                        color: #ffe0c6;
+                        font-size: 4rem;
+                        text-shadow:0 0 4px #0074f8;
                     }
                 }
             }
