--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,13 @@
   outline: none;
 }
 .main {
-  display: flex;
   width: 100%;
   height: 100vh;
   position: relative;
-  display: grid;
 }
 .main .navbar {
   background-color: #181818;
+  max-width: 13rem;
   min-width: 13rem;
   height: 100%;
   display: flex;
@@ -59,6 +58,17 @@
 .main .navbar .navbar__root {
   text-align: center;
   border-top: 1px solid #282828;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.main .navbar .navbar__root li {
+  display: block;
+  width: 100%;
+}
+.main .navbar .navbar__root li:hover a {
+  color: #08fdd8;
+  transition-duration: 1s;
 }
 .main .navbar .navbar__root li a {
   display: block;
@@ -67,13 +77,6 @@
   font-size: 1.6rem;
   line-height: 5rem;
   border-bottom: 1px solid #282828;
-}
-.main .navbar .navbar__root li a:hover {
-  color: #08fdd8;
-  transition-duration: 0.6s;
-}
-.main .navbar .navbar__root li:hover {
-  color: #08fdd8;
 }
 .main .navbar .navbar__contact-icons {
   display: flex;
@@ -140,7 +143,6 @@
   max-height: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
   top: 100vh;
   left: 13rem;
 }
@@ -178,7 +180,7 @@
   background-color: #08fdd8;
   text-align: center;
 }
-.main .right-section .section-projects .project-image .project-hover .project-button a {
+.main .right-section .section-projects .project-image .project-hover .project-button > a {
   text-decoration: none;
   color: black;
   letter-spacing: 0.2rem;
