--- a/css/style.less
+++ b/css/style.less
@@ -5,14 +5,13 @@
 }
 
 .main {
-    // overflow-x: hidden;
-    display: flex;
+    // display: flex;
     width: 100%;
     height: 100vh;
     position: relative;
-    display: grid;
     .navbar {
         background-color: #181818;
+        max-width: 13rem;
         min-width: 13rem;
         height: 100%;
         display: flex;
@@ -59,7 +58,16 @@
         .navbar__root {
             text-align: center;
             border-top: 1px solid #282828;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             li {
+                display: block;
+                width: 100%;
+                &:hover a {
+                    color: #08fdd8;
+                    transition-duration: 1s;
+                }
                 a {
                     display: block;
                     color: #909096;
@@ -67,14 +75,7 @@
                     font-size: 1.6rem;
                     line-height: 5rem;
                     border-bottom: 1px solid #282828;
-                    &:hover {
-                        color: #08fdd8;
-                        transition-duration: 0.6s;
-                    }
-                }
-                &:hover {
-                    color: #08fdd8;
-                }
+                }   
             }
         }
         .navbar__contact-icons {
@@ -142,7 +143,6 @@
             max-height: 100%;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 30px;
             top: 100vh;
             left: 13rem;
             .project-image {
@@ -176,7 +176,7 @@
                         border-radius: 50%;
                         background-color: #08fdd8;
                         text-align: center;
-                        a {
+                        > a {
                             text-decoration: none;
                             color: black; 
                             letter-spacing: 0.2rem;
